--- a/index.html
+++ b/index.html
@@ -4,36 +4,30 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../stats-preview-card-component-main/dist/css/main.css">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://github.com/ViktoriiaZaichuk/stats-preview-card-component-/blob/main/images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Lexend+Deca&display=swap" rel="stylesheet">
   <title>Frontend Mentor | Stats preview card component</title>
-
-<!--   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style> -->
 </head>
 <body>
-  <div class="card-container">
-      <div class="txt-block">
-        <div>
-          <h1>Get <strong>insights</strong> that help your business grow.</h1>
-          <p class="mainprgrph"> Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency.</p>
+    <div class="card-container">
+        <div class="txt-block">
+          <div>
+            <h1>Get <strong>insights</strong> that help your business grow.</h1>
+            <p class="mainprgrph"> Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency.</p>
+          </div>
+          <div class="txt-stats">
+            <p><span>10k+</span><br>COMPANIES</p>
+            <p><span>314</span><br>TEMPLATES</p>
+            <p><span>12M+</span><br>QUERIES</p>
+          </div>
         </div>
-        <div class="txt-stats">
-          <p>10k+ companies</p>
-          <p>314 templates</p>
-          <p>12m+ queries</p>
+        <div class="img-block">
         </div>
-      </div>
-      <div class="img-block">
-      </div>
-  </div>
-
-<!--   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Viktoriia Zaichuk</a>.
-  </div> -->
+    </div>
+    <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="https://codepen.io/viktoriiazaichuk">Viktoriia Zaichuk</a>.
+    </div> 
 </body>
 </html>
